@@ -2,9 +2,11 @@
 v3.0.????? - ?
 ---------------------------
 
+ - Improvements on LUA build scripts and support for LUA 5.2.
+   [Issue #1617 and #1622 - @victorhora, @zimmerle]
  - Fix compilation error with disable_debug_log flag
    [0xfd84e - Izik Abramov]
- - Improvements on the benchmark tool.
+- Improvements on the benchmark tool.
    [Issue #1615 - @zimmerle]
  - Fix lua headers on the build scripts
    [Issue #1621 - @Minasu]
